<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:background="@drawable/bg_adapter_task"
    android:orientation="vertical"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            style="@style/TextAdapterTask"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_device_1" />

        <TextView
            android:id="@+id/tv_type"
            style="@style/TextDefault"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            style="@style/TextAdapterTask"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_device_2" />

        <TextView
            android:id="@+id/tv_name"
            style="@style/TextCheckStatusNoCheck"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            style="@style/TextAdapterTask"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_device_3" />

        <TextView
            android:id="@+id/tv_check_type"
            style="@style/TextDefault"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            style="@style/TextAdapterTask"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_device_4" />

        <TextView
            android:id="@+id/tv_number"
            style="@style/TextDefault"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            style="@style/TextAdapterTask"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_device_5" />

        <TextView
            android:id="@+id/tv_maintenance"
            style="@style/TextDefault"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            style="@style/TextAdapterTask"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_check_status" />

        <TextView
            android:id="@+id/tv_check_status"
            style="@style/TextCheckStatusNoCheck"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_check_status_nocheck" />
    </LinearLayout>


</LinearLayout>