<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="50dp"
    android:background="@drawable/bg_dialog"
    android:layout_gravity="center"
    android:orientation="vertical">

    <TextView
        style="@style/TextAdapterTask"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/dialog_title" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/line" />

    <TextView
        android:id="@+id/tv_message"
        style="@style/TextAdapterTask"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:text="@string/dialog_message_label_identification_type" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="10dp">


        <Button
            android:id="@+id/btn_confirm"
            style="@style/TextButtonWhite"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/button_height"
            android:layout_weight="1"
            android:background="@drawable/btn_blue"
            android:text="@string/btn_identification_nfc" />

    </LinearLayout>


</LinearLayout>