<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/rl_container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:background="@drawable/bg_adapter_task">

    <Button
        android:id="@+id/btn_complete"
        style="@style/TextButtonWhite"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/btn_blue"
        android:text="@string/btn_complete" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_toLeftOf="@id/btn_complete"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="10dp">

            <TextView
                style="@style/TextAdapterTask"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_check_cabinet_number" />

            <TextView
                android:id="@+id/tv_number"
                style="@style/TextDefault"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="aaa" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingBottom="10dp">

            <TextView
                style="@style/TextAdapterTask"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_check_status" />

            <TextView
                android:id="@+id/tv_check_status"
                style="@style/TextCheckStatusNoCheck"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_check_status_nocheck" />
        </LinearLayout>
    </LinearLayout>


</RelativeLayout>