<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context="com.ceb.dcpms.android.activity.MainActivity">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_height"
        android:background="@drawable/bg_title"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="@dimen/icon_back_width"
            android:layout_height="@dimen/icon_back_height"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            app:srcCompat="@mipmap/icon_arrow_left_white" />

        <TextView
            style="@style/TextTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/text_title_checkservice" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:orientation="horizontal">

        <RelativeLayout
            android:id="@+id/rl_task_scheduled"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_name"
                style="@style/TextMenuSelect"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/text_menu_service_task_1" />

            <View
                android:id="@+id/line"
                android:layout_width="wrap_content"
                android:layout_height="2dp"
                android:layout_alignLeft="@id/tv_name"
                android:layout_alignRight="@id/tv_name"
                android:layout_alignParentBottom="true"
                android:layout_marginLeft="-20dp"
                android:layout_marginRight="-20dp"
                android:background="@drawable/bg_title" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_task_temporary "
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@id/tv_name"
                style="@style/TextMenuNormal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/text_menu_service_task_2" />

            <View
                android:id="@id/line"
                android:layout_width="wrap_content"
                android:layout_height="2dp"
                android:layout_alignLeft="@id/tv_name"
                android:layout_alignRight="@id/tv_name"
                android:layout_alignParentBottom="true"
                android:layout_marginLeft="-20dp"
                android:layout_marginRight="-20dp"
                android:background="@drawable/bg_title"
                android:visibility="gone" />
        </RelativeLayout>
    </LinearLayout>

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/line" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/vp_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@id/ll_upload" />

        <LinearLayout
            android:id="@+id/ll_upload"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_alignParentBottom="true"
            android:background="@color/color_button_default"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="@dimen/icon_button_width"
                android:layout_height="@dimen/icon_button_height"
                app:srcCompat="@mipmap/icon_upload" />

            <TextView
                style="@style/TextButtonWhite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:text="@string/btn_upload_data" />
        </LinearLayout>
    </RelativeLayout>

</LinearLayout>