<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context="com.ceb.dcpms.android.activity.MainActivity">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_height"
        android:background="@drawable/bg_title"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="@dimen/icon_back_width"
            android:layout_height="@dimen/icon_back_height"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            app:srcCompat="@mipmap/icon_arrow_left_white" />

        <TextView
            android:id="@+id/tv_title"
            style="@style/TextTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="F000000001" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.core.widget.NestedScrollView
            android:id="@+id/scrollview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@id/ll_bottom"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="10dp">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <EditText
                    android:id="@+id/et_remark"
                    style="@style/TextDefault"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_margin="10dp"
                    android:background="@drawable/bg_edittext"
                    android:gravity="top"
                    android:hint="@string/hint_remark"
                    android:inputType="textPersonName"
                    android:padding="5dp" />

                <HorizontalScrollView
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:layout_margin="10dp"
                    android:background="@drawable/bg_edittext"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp">

                    <LinearLayout
                        android:id="@+id/ll_photo_list"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:orientation="horizontal"
                        android:paddingTop="10dp"
                        android:paddingBottom="10dp">

                        <ImageView
                            android:id="@+id/iv_add"
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:background="@drawable/bg_button_add"
                            android:padding="10dp"
                            app:srcCompat="@mipmap/icon_add" />
                    </LinearLayout>
                </HorizontalScrollView>

            </LinearLayout>
        </androidx.core.widget.NestedScrollView>

        <LinearLayout
            android:id="@+id/ll_bottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:gravity="center"
            android:orientation="vertical">



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/ll_save"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/color_button_default"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/TextButtonWhite"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/btn_save" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_prev"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/color_button_unknown"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/TextButtonWhite"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/btn_prev" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_next"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/color_button_label"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/TextButtonWhite"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/btn_next" />
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>
    </RelativeLayout>

</LinearLayout>